<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app_grid"
        android:padding="50dp">

        <TextView
            android:id="@+id/txt_name_title"
            style="@style/HomeText"
            android:text="@string/home_name" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/HomeText"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/txt_name_title"
            tools:text="James" />

        <TextView
            android:id="@+id/txt_login_time_title"
            style="@style/HomeText"
            android:layout_below="@+id/txt_name_title"
            android:layout_marginTop="20dp"
            android:text="@string/home_login_time" />

        <TextView
            android:id="@+id/txt_login_time"
            style="@style/HomeText"
            android:layout_below="@+id/txt_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/txt_login_time_title"
            tools:text="2017年8月31日 16：15" />

        <RelativeLayout
            android:id="@+id/layout_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login_time_title"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txt_app_title"
                style="@style/HomeText"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/home_app" />

            <TextView
                android:id="@+id/txt_clear_app"
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:text="@string/home_clear_app" />
        </RelativeLayout>


        <GridView
            android:id="@+id/grid_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_app"
            android:layout_marginTop="5dp"
            android:numColumns="5" />
    </RelativeLayout>
</RelativeLayout>