<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<com.capacity.widget.TitleBar
			android:id="@+id/title_bar"
			android:layout_width="match_parent"
			android:layout_height="@dimen/title_bar_height" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:background="@drawable/bg_side_bar"
				android:orientation="vertical"
				android:paddingBottom="@dimen/margin_h_middle"
				android:paddingLeft="@dimen/margin_h_middle"
				android:paddingRight="@dimen/margin_h_middle"
				android:paddingTop="@dimen/margin_h_middle">

				<TextView
					android:id="@+id/txt_home"
					style="@style/MainMenu"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:paddingTop="10dp"
					android:text="@string/main_home" />

				<LinearLayout
					android:id="@+id/layout_sort"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bg_mian_menu"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:paddingTop="10dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/main_sort"
						android:textColor="@color/green"
						android:textSize="@dimen/txt_size_large" />

					<ImageView
						android:id="@+id/img_sort"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:src="@drawable/icon_composite_arrow" />
				</LinearLayout>

				<ScrollView
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					android:scrollbars="none">

					<LinearLayout
						android:id="@+id/list_sort"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:orientation="vertical"
						android:paddingBottom="2dp" />
				</ScrollView>

				<LinearLayout
					android:id="@+id/layout_scene"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bg_mian_menu"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:paddingTop="10dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/main_scene"
						android:textColor="@color/green"
						android:textSize="@dimen/txt_size_large" />

					<ImageView
						android:id="@+id/img_scene"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:src="@drawable/icon_composite_arrow" />
				</LinearLayout>

				<ScrollView
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					android:scrollbars="none">

					<LinearLayout
						android:id="@+id/list_scene"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:orientation="vertical"
						android:paddingBottom="2dp" />
				</ScrollView>

				<TextView
					android:id="@+id/txt_layout"
					style="@style/MainMenu"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:paddingTop="10dp"
					android:text="@string/main_layout" />

				<TextView
					android:id="@+id/txt_planning"
					style="@style/MainMenu"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:paddingTop="10dp"
					android:text="@string/main_planning" />
			</LinearLayout>

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:background="@color/line_green" />

			<FrameLayout
				android:id="@+id/fragment_container"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="6"
				android:background="@color/black" />
		</LinearLayout>
	</LinearLayout>

	<ListView
		android:id="@+id/right_drawer"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="right"
		android:choiceMode="singleChoice"
		android:background="@color/black"/>
</android.support.v4.widget.DrawerLayout>