<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <com.capacity.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app_grid"
        android:orientation="vertical"
        android:padding="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginRight="5dp">

                        <TextView
                            android:id="@+id/txt_name_1"
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cockpit_ground_prepare" />

                        <ImageView
                            android:id="@+id/img_layout_1"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_cockpit_layout"
                            android:src="@drawable/cockpit_ground_prepare" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">

                        <TextView
                            android:id="@+id/txt_name_2"
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cockpit_navigation_phase" />

                        <ImageView
                            android:id="@+id/img_layout_2"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_cockpit_layout"
                            android:src="@drawable/cockpit_navigation_phase" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginRight="5dp">

                        <TextView
                            android:id="@+id/txt_name_3"
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cockpit_air_interception_guide" />

                        <ImageView
                            android:id="@+id/img_layout_3"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_cockpit_layout"
                            android:src="@drawable/cockpit_air_interception_guide" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">

                        <TextView
                            android:id="@+id/txt_name_4"
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cockpit_air_interception_attack" />

                        <ImageView
                            android:id="@+id/img_layout_4"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_cockpit_layout"
                            android:src="@drawable/cockpit_air_interception_attack" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"

						android:layout_marginRight="5dp">

                        <TextView
                            android:id="@+id/txt_name_5"
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cockpit_open_space_detection" />

                        <ImageView
                            android:id="@+id/img_layout_5"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/bg_cockpit_layout"
                            android:src="@drawable/cockpit_open_space_detection" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center"

						android:layout_marginLeft="5dp">

						<TextView
							android:id="@+id/txt_name_6"
							style="@style/DetailText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="布局7" />

						<ImageView
							android:id="@+id/img_layout_6"
							android:layout_width="match_parent"
							android:layout_height="100dp"
							android:background="@drawable/bg_cockpit_layout"
							android:src="@drawable/new_layout" />

					</LinearLayout>
                </LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="20dp">

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center"

						android:layout_marginRight="5dp">

						<TextView
							android:id="@+id/txt_name_7"
							style="@style/DetailText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="新布局8" />

						<ImageView
							android:id="@+id/img_layout_7"
							android:layout_width="match_parent"
							android:layout_height="100dp"
							android:background="@drawable/bg_cockpit_layout"
							android:src="@drawable/new_layout_8" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center"
						android:layout_marginLeft="5dp">

						<TextView
							android:id="@+id/txt_name_8"
							style="@style/DetailText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="布局9" />

						<ImageView
							android:id="@+id/img_layout_8"
							android:layout_width="match_parent"
							android:layout_height="100dp"
							android:background="@drawable/bg_cockpit_layout"
							android:src="@drawable/new_layout_9" />

					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="20dp">

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center"

						android:layout_marginRight="5dp">

						<TextView
							android:id="@+id/txt_name_9"
							style="@style/DetailText"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="新布局10" />

						<ImageView
							android:id="@+id/img_layout_9"
							android:layout_width="match_parent"
							android:layout_height="100dp"
							android:background="@drawable/bg_cockpit_layout"
							android:src="@drawable/new_layout_10" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center"

						android:layout_marginLeft="5dp">

						<!--<TextView-->
							<!--android:id="@+id/txt_name_6"-->
							<!--style="@style/DetailText"-->
							<!--android:layout_width="wrap_content"-->
							<!--android:layout_height="wrap_content"-->
							<!--android:text="布局7" />-->

						<!--<ImageView-->
							<!--android:id="@+id/img_layout_6"-->
							<!--android:layout_width="match_parent"-->
							<!--android:layout_height="100dp"-->
							<!--android:background="@drawable/bg_cockpit_layout"-->
							<!--android:src="@drawable/new_layout" />-->

					</LinearLayout>
				</LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>